# Process-Memory-Tracker

./: .gitignore  Process-Memory-Tracker.pptx  README.md  Test.cpp  showMemInfo.cpp  task2.cpp
ProgramTracer/: CMakeLists.txt  Operation Manual.md  tracerConfig.h.in
ProgramTracer/include/: MemoryAllocationWrap.h  StackTracerManagement.h  TracerSignal.h
ProgramTracer/src/: FileManagement.cpp  MemoryAllocationWrap.cpp  StackTracerManagement.cpp  TracerSignal.cpp
ProgramTracer/test/: DockingTest.cpp  SimpleTest.cpp  main.cpp
ProgramTracer/tmp/memTracer/4795/139969731680064/: 22557488_1621707165_4
ProgramTracer/tmp/memTracer/4950/140364088112960/: 0_1621707304_0
ProgramTracer/tmp/memTracer/5054/139726109382464/: 0_1621707637_0
StaticTracer/: build_gcc.sh
StaticTracer/include/: FileManagement.h  MemoryAllocationWrap.h  StackTracerManagement.h
StaticTracer/output/memTracer/4719/140042564196160/: 35643440_1621707106_4
StaticTracer/output/memTracer/4867/139969903855424/: 17621040_1621707224_4  17621808_1621707224_4
StaticTracer/src/: FileManagement.cpp  MemoryAllocationWrap.cpp  StackTracerManagement.cpp  TracerSignal.cpp
StaticTracer/test/: main.cpp  main_c.c  signal_test.cpp  test_mkdir.cpp
SystemTracer/: CMakeLists.txt  main.cpp
Task1&2/: Task.cpp  Task.h  main.cpp
